[build-system]
requires = ["hatchling>=1.6.0"]
build-backend = "hatchling.build"

[project]
name = "certpeek"
description = "Peeks at certificates exposed by other hosts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [{ name = "Magnus Watn", email = "magnus@watn.no" }]
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = ["click", "cryptography", "pyopenssl"]
dynamic = ["version"]

[project.scripts]
certpeek = "certpeek:main"

[project.urls]
Homepage = "https://github.com/magnuswatn/certpeek"

[tool.hatch.build]
include = ["certpeek.py"]

[tool.hatch.version]
path = "certpeek.py"

[tool.hatch.envs.default]
dependencies = ["black", "isort", "mypy", "types-pyOpenSSL", "httpx"]

[tool.hatch.envs.default.scripts]
mypy = "python -m mypy --config=pyproject.toml certpeek.py"
black = "python -m black --config=pyproject.toml certpeek.py"
isort = "python -m isort --settings-file=pyproject.toml certpeek.py"
checks = ["black", "isort", "mypy"]
updatectlogs = "./updatectlogs.py | black -"

[tool.isort]
profile = "black"

[tool.mypy]
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
