[build-system]
requires = ["hatchling>=1.6.0"]
build-backend = "hatchling.build"

[project]
name = "certpeek"
description = "Peeks at certificates exposed by other hosts."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Magnus Watn", email = "magnus@watn.no" }]
keywords = []
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "click",
    "cryptography>=40.0.0",
    "idna>=3.11",
    "pyopenssl",
]
dynamic = ["version"]

[project.scripts]
certpeek = "certpeek:main"

[project.urls]
Homepage = "https://github.com/magnuswatn/certpeek"

[tool.hatch.build]
include = ["certpeek.py"]

[tool.hatch.version]
path = "certpeek.py"

[dependency-groups]
dev = [
    "httpx",
    "ty>=0.0.5",
    "ruff>=0.14.8",
]

[tool.uv]
exclude-newer = "P14D"
exclude-newer-package = { ty = "P2D" }

[tool.ruff]
lint.select = [
    "E",
    "F",
    "PLW",
    "PLE",
    "W",
    "B",
    "UP",
    "DTZ",
    "TRY",
    "C4",
    "I",
    "N",
    "G",
    "PIE",
    "PT",
    "PTH",
    "S",
    "SIM",
    "RUF",
    "FBT",
]
lint.ignore = ["TRY003", "SIM105", "W191", "E501"]
